[gd_scene load_steps=6 format=3 uid="uid://main_scene"]

[ext_resource type="Script" path="res://scripts/Main.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://player_scene" path="res://scenes/Player.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://vehicle_scene" path="res://scenes/Vehicle.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://coin_scene" path="res://scenes/Coin.tscn" id="4"]
[ext_resource type="PackedScene" uid="uid://goal_scene" path="res://scenes/Goal.tscn" id="5"]

[node name="Main" type="Node2D"]
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
offset_right = 800.0
offset_bottom = 600.0
color = Color(0.15, 0.25, 0.15, 1)

[node name="Road1" type="ColorRect" parent="."]
offset_top = 100.0
offset_right = 800.0
offset_bottom = 180.0
color = Color(0.2, 0.2, 0.2, 1)

[node name="Road2" type="ColorRect" parent="."]
offset_top = 220.0
offset_right = 800.0
offset_bottom = 300.0
color = Color(0.2, 0.2, 0.2, 1)

[node name="Road3" type="ColorRect" parent="."]
offset_top = 340.0
offset_right = 800.0
offset_bottom = 420.0
color = Color(0.2, 0.2, 0.2, 1)

[node name="Road4" type="ColorRect" parent="."]
offset_top = 460.0
offset_right = 800.0
offset_bottom = 540.0
color = Color(0.2, 0.2, 0.2, 1)

[node name="Goal" parent="." instance=ExtResource("5")]
position = Vector2(400, 30)

[node name="Player" parent="." instance=ExtResource("2")]
position = Vector2(400, 570)

[node name="VehicleSpawner1" type="Node2D" parent="."]
position = Vector2(0, 140)
script = preload("res://scripts/VehicleSpawner.gd")

[node name="VehicleSpawner2" type="Node2D" parent="."]
position = Vector2(800, 260)
script = preload("res://scripts/VehicleSpawner.gd")

[node name="VehicleSpawner3" type="Node2D" parent="."]
position = Vector2(0, 380)
script = preload("res://scripts/VehicleSpawner.gd")

[node name="VehicleSpawner4" type="Node2D" parent="."]
position = Vector2(800, 500)
script = preload("res://scripts/VehicleSpawner.gd")

[node name="Coin1" parent="." instance=ExtResource("4")]
position = Vector2(200, 140)

[node name="Coin2" parent="." instance=ExtResource("4")]
position = Vector2(600, 260)

[node name="Coin3" parent="." instance=ExtResource("4")]
position = Vector2(300, 380)

[node name="Coin4" parent="." instance=ExtResource("4")]
position = Vector2(700, 500)

[node name="Coin5" parent="." instance=ExtResource("4")]
position = Vector2(150, 260)

[node name="Coin6" parent="." instance=ExtResource("4")]
position = Vector2(650, 380)

[node name="UI" type="CanvasLayer" parent="."]

[node name="ScoreLabel" type="Label" parent="UI"]
offset_left = 10.0
offset_top = 10.0
offset_right = 200.0
offset_bottom = 50.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
text = "Score: 0"

[node name="StartOverlay" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="UI/StartOverlay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="CenterContainer" type="CenterContainer" parent="UI/StartOverlay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/StartOverlay/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="UI/StartOverlay/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0, 1)
theme_override_font_sizes/font_size = 48
text = "CROSSRUNNER"
horizontal_alignment = 1

[node name="InstructionsLabel" type="Label" parent="UI/StartOverlay/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 18
text = "Use W/A/S/D to move
Dodge the fast cars!
Collect coins for points
Reach the green goal at the top"
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="UI/StartOverlay/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "START GAME"

[node name="CloseButton" type="Button" parent="UI/StartOverlay/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "CLOSE"

[editable path="VehicleSpawner1"]
[editable path="VehicleSpawner2"]
[editable path="VehicleSpawner3"]
[editable path="VehicleSpawner4"]